[gd_scene load_steps=12 format=2]

[ext_resource path="res://gameicons-expansion (1)/Game icons (base)/PNG/White/2x/home.png" type="Texture" id=1]
[ext_resource path="res://spaceshooter/PNG/UI/playerLife1_blue.png" type="Texture" id=2]
[ext_resource path="res://spaceshooter/Bonus/kenvector_future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://uipack_fixed (1)/PNG/blue_button09.png" type="Texture" id=4]
[ext_resource path="res://GUI.gd" type="Script" id=5]
[ext_resource path="res://uipack_fixed (1)/PNG/blue_button10.png" type="Texture" id=6]
[ext_resource path="res://onscreencontrols/Sprites/transparentDark/transparentDark45.png" type="Texture" id=8]
[ext_resource path="res://Joystick/Joystick.tscn" type="PackedScene" id=9]
[ext_resource path="res://Button.gd" type="Script" id=10]
[ext_resource path="res://Controls.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeButton" type="TextureButton" parent="MarginContainer/VBoxContainer/TopBar"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0 )
margin_right = 49.0
margin_bottom = 49.0
rect_min_size = Vector2( 49, 49 )
size_flags_horizontal = 4
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )

[node name="Home" type="TextureRect" parent="MarginContainer/VBoxContainer/TopBar/HomeButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.5
margin_top = -21.5
margin_right = 18.5
margin_bottom = 16.5
rect_pivot_offset = Vector2( 19, 19 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="HealthBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopBar"]
margin_left = 65.0
margin_right = 795.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarProgress" type="TextureProgress" parent="MarginContainer/VBoxContainer/TopBar/HealthBar"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0 )
margin_top = 12.0
margin_right = 33.0
margin_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 33, 25 )
rect_pivot_offset = Vector2( 16, 13 )
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 1.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
fill_mode = 3
tint_under = Color( 0, 0, 0, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar/HealthBar"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0 )
margin_left = 43.0
margin_right = 70.0
margin_bottom = 49.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "5"
align = 1
valign = 1

[node name="ScoreBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopBar"]
margin_left = 811.0
margin_right = 984.0
margin_bottom = 49.0
size_flags_horizontal = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelBar" type="Label" parent="MarginContainer/VBoxContainer/TopBar/ScoreBar"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0 )
margin_top = 6.0
margin_right = 173.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "0000.00"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_vertical = 3
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="Controls" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 25.0
margin_top = 354.0
margin_right = 959.0
margin_bottom = 482.0
size_flags_vertical = 10
script = ExtResource( 11 )

[node name="Fire" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/Controls"]
margin_right = 64.0
margin_bottom = 128.0
rect_min_size = Vector2( 64, 128 )
size_flags_horizontal = 0
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5
script = ExtResource( 10 )

[node name="Joystick" parent="MarginContainer/VBoxContainer/MarginContainer/Controls" instance=ExtResource( 9 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 806.0
margin_top = 0.0
margin_right = 934.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 10

[connection signal="pressed" from="MarginContainer/VBoxContainer/TopBar/HomeButton" to="." method="_on_TextureButton_pressed"]
